#[package]
#name = "verus-test"
#version = "0.1.0"
#edition = "2021"
#
#[dependencies]
##vstd = { version = "=0.0.0-2025-11-05-1950", path = "/home/ggujjula/verus/source/vstd" }
##verus_builtin = { version = "=0.0.0-2025-11-05-1950", path = "/home/ggujjula/verus/source/builtin" }
##verus_builtin_macros = { version = "=0.0.0-2025-11-05-1950", path = "/home/ggujjula/verus/source/builtin_macros" }
##verus_state_machines_macros = { version = "=0.0.0-2025-11-05-1950", path = "/home/ggujjula/verus/source/state_machines_macros" }
#vstd = "=0.0.0-2025-08-12-1837"
#verus_builtin = "=0.0.0-2025-08-12-1837"
#verus_builtin_macros = "=0.0.0-2025-08-12-1837"
#verus_state_machines_macros = "=0.0.0-2025-08-12-1837"
#
#[package.metadata.verus]
#verify = true
[package]
name = "verus-test"
version = "0.1.0"
edition = "2021"

[dependencies]
#vstd = "=0.0.0-2025-11-10-1957"
vstd = { path = "/home/ggujjula/verus/source/vstd" }
#verus_builtin = { path = "/home/ggujjula/verus/source/builtin" }

[package.metadata.verus]
verify = true
